--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -309,27 +309,32 @@ header .mobile {
 
 @media only screen and (max-width: 760px) {
   #filters-section {
-    padding: 1.5rem 0 0 0;
+    padding: 4rem 0 0 0;
+    background-color: #4a4a4a;
   }
 
   #filters-section .content {
-    margin-bottom: 1rem;
+    margin-bottom: 5rem;
   }
 
   #filters-section .content h2 {
     padding-bottom: .625rem;
-    font-size: 1.125rem;
+    font-size: 2.25rem;
     line-height: 1.3;
-    font-weight: normal;
+    font-weight: bold;
   }
 
   #filters-section .content h3 {
-    font-size: .875rem;
+    font-size: 1rem;
     line-height: 1.4;
+    font-weight: 300;
+    color: white;
   }
 
   #filters-section .images-container {
-    padding: 0;
+    padding: 0 1%;
+    display: flex;
+    max-width: 100%;
   }
 
   #filters-section .extra {
