--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -118,9 +118,9 @@ header .mobile {
   justify-content: flex-start;
   align-items: flex-start;
   height: 43.5rem;
-  background-image: url("./resources/images/banner-landingpage.jpg");
   background-position: center;
   background-size: cover;
+  background-image: url(../images/banner-landingpage.jpg);
 }
 
 #sign-up-cta {
