--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -310,19 +310,19 @@ header .mobile {
 
 @media only screen and (max-width: 760px) {
   #filters-section {
-    padding: 4rem 0 0 0;
+    padding: 1.5rem 0 0 0;
     background-color: #4a4a4a;
   }
 
   #filters-section .content {
-    margin-bottom: 5rem;
+    margin-bottom: 1rem;
   }
 
   #filters-section .content h2 {
     padding-bottom: .625rem;
-    font-size: 2.25rem;
+    font-size: 1.125rem;
     line-height: 1.3;
-    font-weight: bold;
+    font-weight: normal;
   }
 
   #filters-section .content h3 {
@@ -356,7 +356,7 @@ header .mobile {
 #quotes-section .quote {
   padding-right: 1.875rem;
   font-family: "Palatino", serif;
-  font-size: 30px;
+  font-size: 1.875rem;
   line-height: 1.1;
   font-style: italic;
   color: #4a4a4a;
@@ -372,7 +372,7 @@ header .mobile {
     padding: 1.875rem .625rem;
   }
 
-  #quotes-section quote {
+  #quotes-section .quote {
     font-size: 1.5rem;
     line-height: 1.4;
   }
